Add print styles

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@ title: Tomas Mulder's Resume
                             </svg>
                         </span>
                         <h3>Email</h3>
+                        <span class="print-version print-version--email"></span>
                     </label>
                     <a href="https://github.com/tcmulder" target="_blank" class="contact-links__group">
                         <span class="contact-links__icon">
@@ -191,6 +192,7 @@ title: Tomas Mulder's Resume
                             </svg>
                         </span>
                         <h3>GitHub</h3>
+                        <span class="print-version">https://github.com/tcmulder</span>
                     </a>
                     <a href="http://codepen.io/tcmulder/" target="_blank" class="contact-links__group">
                         <span class="contact-links__icon">
@@ -199,6 +201,7 @@ title: Tomas Mulder's Resume
                             </svg>
                         </span>
                         <h3>CodePen</h3>
+                        <span class="print-version">http://codepen.io/tcmulder/</span>
                     </a>
                     <a href="https://twitter.com/tcmulder" target="_blank" class="contact-links__group">
                         <span class="contact-links__icon">
@@ -207,6 +210,7 @@ title: Tomas Mulder's Resume
                             </svg>
                         </span>
                         <h3>Twitter</h3>
+                        <span class="print-version">https://twitter.com/tcmulder</span>
                     </a>
                 </div>
 
@@ -320,38 +324,40 @@ title: Tomas Mulder's Resume
                 <h2>Achievements</h2>
             </div>
 
-            <div class="achieve__group achieve__group--zen-principle">
-                <!-- 2016 -->
-                <p>Promoted to Principle Developer at Zenman, in charge of all development-related company activities.</p>
-            </div>
-            <div class="achieve__group achieve__group--zen-lead">
-                <!-- 2015 -->
-                <p>Promoted to Lead Developer at Zenman for demonstrating my leadership and mentoring capacity.</p>
-            </div>
-            <div class="achieve__group achieve__group--zen-senior">
-                <!-- 2014 -->
-                <p>Promoted to Senior Developer at Zenman for exhibiting advanced development skills.</p>
-            </div>
-            <div class="achieve__group achieve__group--du-4">
-                <!-- 2012 -->
-                <p>Earned a 4.0 GPA.</p>
-            </div>
-            <div class="achieve__group achieve__group--usmc-good-cookie">
-                <!-- 2009 -->
-                <p>Earned Marine Corps Good Conduct Medal for three years of honorable and faithful service.</p>
-            </div>
-            <div class="achieve__group achieve__group--usmc-commendation">
-                <!-- 2007 -->
-                <p>Earned Marine Corps Certificate of Commendation for outstanding achievement in duties.</p>
-            </div>
-            <div class="achieve__group achieve__group--tech-4">
-                <!-- 2006 -->
-                <p>Earned a 4.0 GPA.</p>
-            </div>
-            <div class="achieve__group achieve__group--tech-achievement">
-                <!-- 2006 -->
-                <p>Earned the Outstanding Achievement award in the Professional and Technical Communication Program.</p>
-            </div>
+            <ul>
+                <li class="achieve__group achieve__group--zen-principle">
+                    <!-- 2016 -->
+                    <p>Promoted to Principle Developer at Zenman, in charge of all development-related company activities.</p>
+                </li>
+                <li class="achieve__group achieve__group--zen-lead">
+                    <!-- 2015 -->
+                    <p>Promoted to Lead Developer at Zenman for demonstrating my leadership and mentoring capacity.</p>
+                </li>
+                <li class="achieve__group achieve__group--zen-senior">
+                    <!-- 2014 -->
+                    <p>Promoted to Senior Developer at Zenman for exhibiting advanced development skills.</p>
+                </li>
+                <li class="achieve__group achieve__group--du-4">
+                    <!-- 2012 -->
+                    <p>Earned a 4.0 GPA.</p>
+                </li>
+                <li class="achieve__group achieve__group--usmc-good-cookie">
+                    <!-- 2009 -->
+                    <p>Earned Marine Corps Good Conduct Medal for three years of honorable and faithful service.</p>
+                </li>
+                <li class="achieve__group achieve__group--usmc-commendation">
+                    <!-- 2007 -->
+                    <p>Earned Marine Corps Certificate of Commendation for outstanding achievement in duties.</p>
+                </li>
+                <li class="achieve__group achieve__group--tech-4">
+                    <!-- 2006 -->
+                    <p>Earned a 4.0 GPA.</p>
+                </li>
+                <li class="achieve__group achieve__group--tech-achievement">
+                    <!-- 2006 -->
+                    <p>Earned the Outstanding Achievement award in the Professional and Technical Communication Program.</p>
+                </li>
+            </ul>
 
         </div> <!-- .achieve -->
 
