Update web design to graphics design

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ title: Tomas Mulder's Resume
                                         <span>Usability Testing</span>
                                     </li>
                                     <li class="icon-slider__stat" data-per="40">
-                                        <span>Website Design</span>
+                                        <span>Graphics Design</span>
                                     </li>
                                 </ul>
                             </div>
